// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BottomModal visible={true} showOpacityMask={false}/> should render correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "height": 667,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "height": 667,
            "position": "relative",
          }
        }
        testID="modalPressableArea"
      />
    </View>
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "white",
          "borderTopLeftRadius": 15,
          "borderTopRightRadius": 15,
          "bottom": 0,
          "flex": 1,
          "position": "relative",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingHorizontal": 15,
            "paddingVertical": 25,
          }
        }
      >
        <Text>
          child component
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`<BottomModal visible={true}/> should render correctly 1`] = `
[
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    transparent={true}
    visible={true}
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "height": 667,
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "height": 667,
              "position": "relative",
            }
          }
          testID="modalPressableArea"
        />
      </View>
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "white",
            "borderTopLeftRadius": 15,
            "borderTopRightRadius": 15,
            "bottom": 0,
            "flex": 1,
            "position": "relative",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingHorizontal": 15,
              "paddingVertical": 25,
            }
          }
        >
          <Text>
            child component
          </Text>
        </View>
      </View>
    </View>
  </Modal>,
  <View
    style={
      {
        "backgroundColor": "rgba(0,0,0,0.75)",
        "bottom": 0,
        "elevation": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 1,
      }
    }
  />,
]
`;
